force-app/main/default/objects/DeliveryPackageQrCode__c/DeliveryPackageQrCode__c.object-meta.xml
<CustomObject>
    <label>Delivery Package QR Code</label>
    <nameField>
        <displayFormat>DelPkgQrCde - {0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Package QR Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>