force-app/main/default/objects/DeliveryPackageQrCode__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>