force-app/main/default/objects/DeliveryPackageQrCode__c/fields/DeliveryPackage__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPackage__c</fullName>
    <label>Delivery Package</label>
    <referenceTo>DeliveryPackage__c</referenceTo>
    <relationshipLabel>QR Codes</relationshipLabel>
    <relationshipName>QrCodes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>