force-app/main/default/objects/DeliveryPackageQrCode__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>QR Codes</relationshipLabel>
    <relationshipName>QrCodes</relationshipName>
    <type>Lookup</type>
</CustomField>