force-app/main/default/objects/DeliveryPackageQrCode__c/validationRules/RestrictOrderProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictOrderProduct</fullName>
    <active>true</active>
    <errorConditionFormula>OrderProduct__r.OrderId !=  DeliveryPackage__r.Order__c</errorConditionFormula>
    <errorDisplayField>OrderProduct__c</errorDisplayField>
    <errorMessage>Order Product does not belong to the Order.</errorMessage>
</ValidationRule>